# brew-focus

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
scripts/: generate-icons.mjs  generate-sounds.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_task_improvements.sql  003_milestones_session_notes.sql  004_per_task_long_break.sql  005_mood.sql  006_profiles.sql  007_delete_user_fn.sql  008_storage_avatars.sql  009_project_management.sql  010_project_focus_goal.sql  011_activity_log.sql  012_coffee_cup_catalog.sql  013_project_custom_durations.sql  014_focus_increment_and_username_rpcs.sql  015_security_hardening.sql
src-tauri/src/: commands.rs  events.rs  lib.rs  main.rs  timer.rs  tray.rs
src/components/: ActivityTimeline.tsx  FocusCustomizePanel.tsx  MarkdownNotes.tsx  PriorityIcon.tsx  ProBadge.tsx  QuickCapturePreview.tsx  ReportsModal.tsx  SessionAnimation.tsx  SettingsModal.tsx  TimerModal.tsx  TitleBar.tsx  UpdateBanner.tsx
src/components/AccountSettings/: index.tsx
src/components/AuthScreen/: index.tsx
src/components/FocusScreen/: CoffeeCup.tsx  CoffeeCupPicker.tsx  DailyQueuePanel.tsx  TaskSelector.tsx  TimerControls.tsx  TimerDisplay.tsx  TimerView.tsx  index.tsx
src/components/MarkdownNotes/: Outline.tsx  Preview.tsx  SelectionToolbar.tsx  SlashMenu.tsx  index.tsx  preprocessing.ts  textarea-utils.ts
src/components/ProjectsScreen/: GraphView.tsx  NewProjectModal.tsx  ProjectActivityTimeline.tsx  ProjectBoard.tsx  ProjectCalendar.tsx  (+8 more)
src/contexts/: WindowModeContext.tsx
src/hooks/: useClickSound.ts  useTimer.ts  useUpdater.ts  useWindowMode.ts
src/i18n/: index.ts
src/store/: activityStore.ts  authStore.ts  coffeeCupCatalogStore.ts  localeStore.ts  settingsStore.ts  taskStore.ts  timerStore.ts
src/types/: index.ts
src/utils/: backgroundNoise.ts  backgrounds.ts  dependencies.ts  forceSim.ts  format.ts  nanoid.ts  quickCapture.ts  repeatUtils.ts  soundOptions.ts  sounds.ts  staleTask.ts  supabase.ts  svgExtract.ts  themes.ts  wikiLinks.tsx
(+71 files in other folders)
